5/5/2013 version 1.0 released